
2019-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (special_name_list): better error recovery (at least as long
	  as one valid SPECIAL-NAMES entry was found)

2019-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (emit_entry_goto, entry_name_list, entry_name),
	  typeck.c (cb_emit_goto_entry), config.def, tree.h,
	  codegen.c (output_goto, output_goto_entry): added extension
	  GO TO ENTRY / ENTRY FOR GO TO, intended mainly for generated code;
	  guarded by compiler configuration "goto-entry", defaults to warning

2019-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): check for conflict markers (similar to GCC)

2019-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppcopy): ensure to have original errno, not the one from
	  one of the files in search path
	* pplex.l (ppcopy) [_WIN32]: fixed EINVAL for path argument access doesn't
	  allow mixed slashes or anything before a partition identifier
	* parser.y: extracted program_init_without_program_id
	* parser.y: moved _options_paragraph references into _program_body

2019-06-23  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, codegen.c, pplex.l, ppparse.y, reserved.c, scanner.l, tree.c,
	  typeck.c: fixed possible arithmetic overflow

2019-06-08  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, parser.y: removed compiler support options cb_json_generate
	  and cb_xml_generate, as soon as those words are reserved we take those
	  statements as supported

2019-06-07  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (get_prev_ml_tree_entry): fixed null-pointer access with code
	  similar to use in other places
	* tree.c, tree.h: added struct cb_next_elem to be used for any structure
	  that has a next pointer as first entry, to be used by (cb_next_length)
	  to get the size of the complete entry (only reasonable to call with the
	  "main" entry normally attached to a program)
	* typeck.c (cb_validate_program_data): set alphabet->custom_list to error