@@ -208,7 +208,9 @@ hexadecimal-boolean:			unconformable
 national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
 national-character-literals:		unconformable
+# TO-DO: Add separate config option for H"..." to be unsupported,numeric,non-numeric(acu)
 acu-literals:			ok
+hp-octal-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
