@@ -207,6 +207,7 @@ national-literals:			ok
 hexadecimal-national-literals:		ok
 national-character-literals:		unconformable
 acu-literals:				unconformable
+hp-octal-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
