@@ -213,7 +213,9 @@ hexadecimal-boolean:			ok
 national-literals:			ok
 hexadecimal-national-literals:		ok
 national-character-literals:		warning
+# TO-DO: Add separate config option for H"..." to be unsupported,numeric,non-numeric(acu)
 acu-literals:				unconformable
+hp-octal-literals:			unconformable
 word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
